--- a/css/markdown.css
+++ b/css/markdown.css
@@ -62,7 +62,6 @@ div.markdown-inputhider {
 	/*overflow: auto;*/
 	-webkit-font-smoothing: antialiased;
 	-webkit-transform: translate3d(0,0,0);
-	min-height: 80px;
 }
 
 div.markdown-outputcontent {
@@ -77,7 +76,7 @@ div.markdown-outputcontent {
 	padding: 10px;
 	cursor: text;
 	outline: none;
-	font: 11pt "Source Sans Pro",UILanguageFont,Arial,sans-serif;
+	font: 10pt "Source Sans Pro",UILanguageFont,Arial,sans-serif;
 	white-space: pre;
 	/*overflow: auto;*/
 	/*background: #f5f5f5;*/
@@ -85,6 +84,7 @@ div.markdown-outputcontent {
 	/*background: rgba(255,255,255,0.95);
 	box-shadow: 0 0 8px #aaa;*/
 	/*height: 130px;*/
+	min-height: 80px;
 }
 
 span.markdown-comment-hidden {
